--- a/tribute.html
+++ b/tribute.html
@@ -17,7 +17,7 @@
       </div>
      
         <h3 id="tribute-info">Here's a time line of Dr. Borlaug's life:</h3>
-        <div>
+        <div id="tribute">
           <ul>
             <li><strong>1914 - </strong>Born in Cresco, Iowa</li>
             <li><strong>1933 - </strong>Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
